primer commit cabecera

--- a/proyecto1/blogspot.html
+++ b/proyecto1/blogspot.html
@@ -8,7 +8,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Cabecera aca inicia cabecera
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
