una version con ssh

--- a/proyecto1/blogspot.html
+++ b/proyecto1/blogspot.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            El titulo del post
+            El titulo del post este cambio tras el ssh
         </title>
         <link rel="stylesheet" href="ccc/estilos.css">
     </head>
